public/stylesheets/style.css
/* color variables */
/*@darkbg:             #1f2336;
@default-lighter: 	 #535a83;
@default-light: 		 #474c6c;
@default: 				   #3c405c;
@default-dark: 			 #343850;
@default-darker: 		 #2a2d3e;
@silver-lighter: 		 #eff5ff;
@silver-light: 		   #d3d7e3;
@silver: 				     #aeb8d6;
@silver-dark: 			 #a4abc1;
@silver-darker: 		 #8690af;
@green-bright: 			 #3cff85;
@green-transparent:  rgba(60, 255, 133, 0.7);*/

/* webfont */
@import url('http://fonts.googleapis.com/css?family=Open+Sans:400,700,600,300,300i');
@import url('https://fonts.googleapis.com/css?family=Roboto+Slab');
@import url(http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css);

a {
  color: #d3d7e3;
}

/* setup */
body {
  font: 14px 'Open Sans', sans-serif;
  background: #1f2336;
  color: #d3d7e3;
}

.title{
  font: 48px 'Roboto Slab', serif;
  color: #55acee;
  text-align: center;
}

.login{
  font: 25px 'Roboto Slab', serif;
  margin: 0px;
  color: #55acee;
  text-align: center;
}

.top20{
  font: 40px 'Roboto Slab', serif;
  margin: 20px;
  color: #AF4A36;
  text-align: center;
}

.form-control{
  width: 80%;
  text-align: center;
  position: absolute;
  left: 50%;
  transform: translate(-50%,0%);
}

.shittyLogo {
  position: absolute;
  top: 25%;
  left: 50%;
  transform: translate(-50%, -50%);
  margin: 10px
}
#bodyContainer {
  position: absolute;
  top: 55%;
  left: 50%;
  transform: translate(-50%, -50%);
  background: #3c405c;
  height: 40vh;
}
.heading{
  font: 20px 'Open Sans', sans-serif;
  color: #d3d7e3;
  text-align: center;
  font-weight: 300;
}

* { box-sizing: border-box; }
.container {
  width: 600px;
  margin: 40px auto;
  background: #3c405c;
  padding: 20px;
  height: auto;
  border: 5px solid #343850;
  .box-shadow(0 0 24px rgba(0,0,0,0.12));

  h1, h2 { padding: 0; margin: 0; .font-smooth; text-align: center; }
  .block {
    padding: 10px;
    border: 2px solid #474c6c;
    margin-top: 6px;
    em {
      text-align: right;
      display: block;
      font-style: normal;
      color: #2a2d3e;
      margin-top: -4px;
      margin-bottom: 4px;
      font-size: 12px;
    }
  }
}

.header{
  display: flex;
}

#homeButtons {
  display: block;
}

.button-cool, .button-cool-search {
  outline:none;
  height: 40px;
  text-align: center;
  width: 140px;
  border-radius:40px;
  background: #3c405c;
  border: 1px solid #1ECD97;
  color:#1ECD97;
  letter-spacing:1px;
  padding: 8px;
  margin: 10px;
  font-size:13px;
  font-weight:bold;
  cursor: pointer;
  transition: all 0.25s ease;
  position: absolute;
  top: 60%;
  left: 50%;
  transform: translate(-50%,0%);
  &:hover {
    color:white;
    background: #1ECD97;
  }
  &:active {
    letter-spacing: 2px ;
  }
  &:after {
    content:"SUBMIT";
  }
}
.onclic {
  width: 40px;
  border-color:#bbbbb;
  border-width:3px;
  font-size:0;
  border-left-color:#1ECD97;
  animation: rotating 2s 0.25s linear infinite;

  &:after {
    content:"";
  }
  &:hover {
    color: white;
    background: #1ECD97;
  }
}
.button-cool:hover, .button-cool-search:hover{
  color:white;
  background: #1ECD97;
}

.button-cool-search{
  top: 75% !important;
}
.button-uncool {
  outline:none;
  height: 40px;
  text-align: center;
  width: 140px;
  border-radius:40px;
  background: #3c405c;
  border: 1px solid white;
  color:white;
  letter-spacing:1px;
  padding: 8px;
  margin: 2px;
  font-size:15px;
  font-weight:bold;
  cursor: pointer;
  transition: all 0.25s ease;
  position: absolute;
  left: 50%;
  transform: translate(-50%,0%);
  justify-content: center;
  &:hover {
    color:#3c405c;
    background: white;
  }
  &:active {
    letter-spacing: 2px ;
  }
  &:after {
    content:"SUBMIT";
  }
}
.onclic {
  width: 40px;
  border-color:#bbbbb;
  border-width:3px;
  font-size:0;
  border-left-color:#1ECD97;
  animation: rotating 2s 0.25s linear infinite;

  &:after {
    content:"";
  }
  &:hover {
    color:#3c405c;
    background: white;
  }
}
.button-uncool:hover{
  color:#3c405c;
  background: white;
}
a:hover{
  color: white;
  text-decoration: none;
}

.button-register, .button-search {
  outline:none;
  height: 40px;
  text-align: center;
  width: 140px;
  border-radius:40px;
  background: #3c405c;
  border: 1px solid white;
  color:white;
  letter-spacing:1px;
  margin: 2px;
  font-size:15px;
  font-weight:bold;
  cursor: pointer;
  transition: all 0.25s ease;
  justify-content: center;
  padding: 8px;
  &:hover {
    color:#3c405c;
    background: white;
  }
  &:active {
    letter-spacing: 2px ;
  }
  &:after {
    content:"SUBMIT";
  }
}
.onclic {
  width: 40px;
  border-color:#bbbbb;
  border-width:3px;
  font-size:0;
  border-left-color:#1ECD97;
  animation: rotating 2s 0.25s linear infinite;

  &:after {
    content:"";
  }
  &:hover {
    color:#3c405c;
    background: white;
  }
}
.button-register:hover, .button-search:hover{
  color:#3c405c;
  background: white;
}

.button-search{
  top: 60%;
  left: 50%;
  transform: translate(150%,0%);
}


a:hover{
  color: white;
  text-decoration: none;
}

.twoButtons {
  display: flex;
  position: absolute;
  top: 80%;
  left: 50%;
  transform: translate(-50%, 0%);
}

.button-facebook {
  outline:none;
  height: 40px;
  text-align: center;
  width: 140px;
  border-radius:40px;
  background: #3c405c;
  border: 1px solid #8b9dc3;
  color:white;
  letter-spacing:1px;
  margin: 2px;
  font-size:12px;
  font-weight:bold;
  cursor: pointer;
  transition: all 0.25s ease;
  justify-content: center;
  &:hover {
    color:##8b9dc3;
    background: white;
  }
  &:active {
    letter-spacing: 2px ;
  }
  &:after {
    content:"SUBMIT";
  }
}
.onclic {
  width: 40px;
  border-color:#bbbbb;
  border-width:3px;
  font-size:0;
  border-left-color:#8b9dc3;
  animation: rotating 2s 0.25s linear infinite;

  &:after {
    content:"";
  }
  &:hover {
    color:#8b9dc3;
    background: white;
  }
}
.button-facebook:hover{
  color:#3c405c;
  background: #8b9dc3;
}
a:hover{
  color: white;
  text-decoration: none;
}
/* ... */

